--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,html5-boilerplate}/**/*\"  app/lib -C",
-    "prestart": "npm install",
+    "prestart": "npm install && webpack",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
